# todo

./: .gitignore  pyproject.toml
config/: settings.py  urls.py
jwt_decorated/: apps.py  serializers.py  views.py
todo/: models.py  permissions.py  serializers.py  views.py
todo/migrations/: 0001_initial.py  0002_todo_created_at_todo_updated_at.py  0003_todo_user.py
user/: models.py  serializers.py  views.py
user/migrations/: 0001_initial.py
